WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70284
r97638
caused 3 printing crashes
https://bugs.webkit.org/show_bug.cgi?id=70284
Summary
r97638 caused 3 printing crashes
Ojan Vafai
Reported
2011-10-17 16:29:35 PDT
As per
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=printing%2Fpage-format-data-display-none.html%20printing%2Fpage-format-data.html%20printing%2Fpage-rule-selection.html%20&group=%40ToT%20-%20webkit.org
it was
http://trac.webkit.org/changeset/97638/
that caused the crashes. printing/page-format-data-display-none.html printing/page-format-data.html printing/page-rule-selection.html
Attachments
null check
(1.23 KB, patch)
2011-10-17 23:34 PDT
,
Antti Koivisto
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-10-17 23:34:57 PDT
Created
attachment 111390
[details]
null check
Kent Tamura
Comment 2
2011-10-17 23:35:54 PDT
Comment on
attachment 111390
[details]
null check ok
Antti Koivisto
Comment 3
2011-10-17 23:39:17 PDT
http://trac.webkit.org/changeset/97724
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug