r97638 caused 3 printing crashes https://bugs.webkit.org/show_bug.cgi?id=70284

Reviewed by Kent Tamura.

Null check element.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::applyDeclarations):



Canonical link: https://commits.webkit.org/86445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97724 268f45cc-cd09-0410-ab3c-d52691b4dbfc